# libtcod-tutorial

./: .gitignore  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/src/: main.cpp
src/cmake/: Findlibtcod.cmake
src/libsatk/: CMakeLists.txt
src/libsatk/include/: System.hpp  libsatk.hpp
src/libsatk/include/components/: Cmp_Move.hpp  Cmp_Position.hpp  Cmp_Sprite.hpp
src/libsatk/include/ecs/: Cmp_Type_Traits.hpp  Component_Manager.hpp  Entity_Manager.hpp
src/libsatk/src/: Input.cpp
src/libsatk/src/ecs/: Component_Manager.cpp  Entity_Manager.cpp
src/libtuto/: CMakeLists.txt
src/libtuto/include/: Cmp_Move.hpp  Cmp_Position.hpp  Cmp_Sprite.hpp  Cmp_Template.tpp  Component_Common.hpp  Defs.hpp  Entity.hpp  Entity_Manager.hpp  IComponent.hpp  IComponent_Base.hpp  Input.hpp  Satk_Common.hpp  System.hpp  libtuto.hpp
src/libtuto/include/ecs/: Cmp_Move.hpp  Cmp_Position.hpp  Cmp_Sprite.hpp  Cmp_Type_Traits.hpp  Component_Common.hpp  Entity_Manager.hpp  IComponent.hpp  System.hpp
src/libtuto/src/: Cmp_Move.cpp  Cmp_Position.cpp  Cmp_Sprite.cpp  Component_Common.cpp  Entity.cpp  Entity_Manager.cpp  IComponent.cpp  System.cpp  input_manager.cpp
src/libtuto/src/ecs/: Component_Common.cpp  Entity_Manager.cpp  System.cpp
